Fix hypergraph id typo

--- a/openbexi_hypergraph.html
+++ b/openbexi_hypergraph.html
@@ -7,15 +7,15 @@
 <body>
 <div id="container"></div>
 <div id="menu">
-    <div id="hypergrah_name">
+    <div id="hypergraph_name">
     </div>
-    <div id="hypergrah_underline"> __________________________
+    <div id="hypergraph_underline"> __________________________
     </div>
     <div id="gridOption">
         <input type="checkbox" id="showGrid" checked>
         <label for="showGrid">Show Grid</label>
     </div>
-    <div id="hypergrah_underline2"> __________________________
+    <div id="hypergraph_underline2"> __________________________
     </div>
     <div id="saveOption">
         <img src="./icons/ob_save.png" id="saveIcon" title="Save Model" alt=""/>
